--- a/styles.css
+++ b/styles.css
@@ -81,10 +81,10 @@ h6 {
 
 body {
     background-color: black;
-    
- 
-    
-  
+
+
+
+
 }
 
 ul {
@@ -100,7 +100,7 @@ nav {
     top: 0;
     bottom: 0;
     left: 0;
-    width: 120px;
+    width: 90px;
     background-color: rgb(16, 10, 23);
     overflow: hidden;
     transition: width 0.2s linear;
@@ -114,8 +114,37 @@ a {
     text-decoration: none;
     position: relative;
     color: white;
-    width: 300px;
+    width: 200px;
+
+}
+
+a.nav-item:hover {
+    background-color: gray;
+    border-radius: 12px;
 }
 
 
+.nav-icon {
 
+    padding: 0 2rem;
+}
+
+
+img.nav-icon {
+    width: 50%;
+    border-radius: 100%;
+}
+
+
+nav:hover {
+    width: 200px;
+}
+
+
+hr {
+    margin: 0rem .8rem;
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
