--- a/styles.css
+++ b/styles.css
@@ -126,7 +126,7 @@ a.nav-item:hover {
 
 .nav-icon {
 
-    padding: 0 2rem;
+    padding: 0 2.2rem;
 }
 
 
@@ -138,11 +138,12 @@ img.nav-icon {
 
 nav:hover {
     width: 200px;
+    transition: all 0.5s ease;
 }
 
 
 hr {
-    margin: 0rem .8rem;
+    margin: 1rem .8rem;
     border: 0;
     height: 0;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
