--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,8 @@ a {
 }
 
 a.nav-item:hover {
+    margin: 0 1rem;
+    transition: all 0.5s ease;
     background-color: gray;
     border-radius: 12px;
 }
@@ -137,7 +139,7 @@ img.nav-icon {
 
 
 nav:hover {
-    width: 200px;
+    width: 230px;
     transition: all 0.5s ease;
 }
 
