--- a/styles.css
+++ b/styles.css
@@ -94,8 +94,16 @@ ul {
 
 
 
+nav.mainNav {
+    background-color: wheat;
+    position: absolute;
+    top: 0;
+    left: 90px;
+    
+}
 
-nav {
+
+nav.sideNav {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -138,7 +146,7 @@ img.nav-icon {
 }
 
 
-nav:hover {
+nav.sideNav:hover {
     width: 230px;
     transition: all 0.5s ease;
 }
@@ -151,3 +159,5 @@ hr {
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
+
+
