--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'poppins',sans-serif;
+    font-family: 'poppins', sans-serif;
 }
 
 /*
@@ -44,7 +44,8 @@ picture,
 video,
 canvas,
 svg {
-    display: inline-block;
+    display: inline;
+
     max-width: 100%;
 }
 
@@ -81,26 +82,87 @@ h6 {
 
 
 /* Css Reset End */
+.flex-div {
+    display: flex;
+    align-items: center;
+}
+
+
 
 #mainNav {
+    padding: 10px 2%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    background: #fff;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+}
+
+
+
+.menu-icon-image {
+width: 20px;
+height: 20px;
+margin-right: 1.5rem;
 
 }
 
-.main-Youtube-Logo{
+
+
+ .youtube-logo-img {
     width: 100px;
-}
-
-
-input[type=search] {
-    padding: .5rem;
-    border-radius: 30px;
-    border-width: 1px;
     
 }
 
-.search-button{
 
+.right img{
+    margin-right: 20px;
+    width: 25px;
+   
+
+}
+
+
+.right .user-icon {
+
+    background-color: rgb(7, 98, 7);
+    padding: .1rem .5rem;
+    border-radius: 100%;
+    color: #fff;
+    
+}
+
+.middle img{
+    width: 25px;
+}
+
+.search-bar{
+
+    width: 100%;
+    max-width: 800px;
+    border: 1px solid gray;
+    display: flex;
+    align-items: center;
+    border-radius: 30px;
     padding: .4rem;
-    position: relative;
-    right: 30px;
+    display: inline;
+}
+
+.search-bar input {
+    outline: none;
+    background: transparent;
+    border: none;
+    padding: 0 15px;
+    width: 500px;
+
+}
+
+.search-bar button  {
+    height: 1rem;
+    background: transparent;
+    border: none;
+
 }
