--- a/styles.css
+++ b/styles.css
@@ -114,55 +114,36 @@ margin-right: 1.5rem;
 
  .youtube-logo-img {
     width: 100px;
-    
 }
 
 
 .right img{
     margin-right: 20px;
     width: 25px;
-   
-
 }
 
 
 .right .user-icon {
-
     background-color: rgb(7, 98, 7);
     padding: .1rem .5rem;
     border-radius: 100%;
     color: #fff;
-    
 }
 
 .middle img{
     width: 25px;
 }
 
-.search-bar{
-
-    width: 100%;
-    max-width: 800px;
-    border: 1px solid gray;
-    display: flex;
-    align-items: center;
+.search-bar {
+    border: 1px solid #ccc;
+    margin-right: 15px;
+    padding: 8px 12px;
     border-radius: 30px;
-    padding: .4rem;
-    display: inline;
 }
-
 .search-bar input {
+    width: 400px;
+    border: 0;
     outline: none;
     background: transparent;
-    border: none;
-    padding: 0 15px;
-    width: 500px;
-
 }
 
-.search-bar button  {
-    height: 1rem;
-    background: transparent;
-    border: none;
-
-}
