--- a/styles.css
+++ b/styles.css
@@ -112,36 +112,36 @@ margin-right: 1.5rem;
 
 
 
- .youtube-logo-img {
+ .nav-left .youtube-logo-img {
     width: 100px;
 }
 
 
-.right img{
+.nav-right img{
     margin-right: 20px;
     width: 25px;
 }
 
 
-.right .user-icon {
+nav-right .user-icon {
     background-color: rgb(7, 98, 7);
     padding: .1rem .5rem;
     border-radius: 100%;
     color: #fff;
 }
 
-.middle img{
+.nav-middle img{
     width: 25px;
 }
 
-.search-bar {
+.nav-middle .search-bar {
     border: 1px solid #ccc;
     margin-right: 15px;
     padding: 8px 12px;
     border-radius: 30px;
 }
-.search-bar input {
-    width: 400px;
+.nav-middle .search-bar input {
+    width: 500px;
     border: 0;
     outline: none;
     background: transparent;
