--- a/styles.css
+++ b/styles.css
@@ -104,33 +104,33 @@ h6 {
 
 
 .menu-icon-image {
-width: 20px;
-height: 20px;
-margin-right: 1.5rem;
+    width: 20px;
+    height: 20px;
+    margin-right: 1.5rem;
 
 }
 
 
 
- .nav-left .youtube-logo-img {
+.nav-left .youtube-logo-img {
     width: 100px;
 }
 
 
-.nav-right img{
+.nav-right img {
     margin-right: 20px;
     width: 25px;
 }
 
 
-nav-right .user-icon {
+.nav-right .user-icon {
     background-color: rgb(7, 98, 7);
     padding: .1rem .5rem;
     border-radius: 100%;
     color: #fff;
 }
 
-.nav-middle img{
+.nav-middle img {
     width: 25px;
 }
 
@@ -140,6 +140,7 @@ nav-right .user-icon {
     padding: 8px 12px;
     border-radius: 30px;
 }
+
 .nav-middle .search-bar input {
     width: 500px;
     border: 0;
@@ -147,3 +148,44 @@ nav-right .user-icon {
     background: transparent;
 }
 
+
+#sideNav {
+    padding: 10px 1%;
+    width: 13%;
+    border: 1px solid red;
+    height: 100vh;
+}
+
+#sideNav img {
+    width: 25px;
+    margin-right: 25px;
+
+
+}
+
+.sideNav-tab {
+    padding: .5rem 1rem;
+
+}
+
+.sideNav-tab:hover {
+    background-color: #ccc;
+    border-radius: 10px;
+    cursor: pointer;
+
+}
+
+#sideNav hr {
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    margin: 1rem 0;
+}
+
+#sideNav h2{
+    font-weight: lighter;
+    font-size: 1rem;
+
+    
+}
